php(Dockerfile): instala libsqlite3-dev e compila pdo_sqlite/sqlite3

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -5,8 +5,11 @@ WORKDIR /app
 # Copia os arquivos PHP
 COPY . /app
 
-# Habilita extensões necessárias (PDO SQLite e SQLite3)
-RUN docker-php-ext-install pdo_sqlite sqlite3
+# Instala dependências de build e habilita extensões necessárias (PDO SQLite e SQLite3)
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends libsqlite3-dev \
+    && docker-php-ext-install pdo_sqlite sqlite3 \
+    && rm -rf /var/lib/apt/lists/*
 
 # Ajusta config.php para usar caminho do container
 ENV PHP_DB_PATH=/app/gestao_obras.db
