render: dockerfilePath relativo ao dockerContext

--- a/render.yaml
+++ b/render.yaml
@@ -20,8 +20,8 @@ services:
     plan: free
     region: oregon
     autoDeploy: true
-    dockerfilePath: ./php/Dockerfile
-    dockerContext: ./php
+  dockerfilePath: Dockerfile
+  dockerContext: ./php
     envVars:
       - key: PHP_DB_PATH
         value: /app/gestao_obras.db
