--- a/render.yaml
+++ b/render.yaml
@@ -31,6 +31,11 @@ services:
     runtime: static
     staticPublishPath: ./frontend/build
     buildCommand: cd frontend && npm ci && npm run build
+    autoDeploy: true
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: REACT_APP_API_URL
         value: https://gestao-backend-lbab.onrender.com
