--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       - key: SECRET_KEY
         value: secret-key-thors-gestor-2025
       - key: ALLOW_ORIGINS
-        value: http://localhost:3000,http://localhost:3001,http://localhost:3005,https://gestao-frontend.onrender.com
+        value: http://localhost:3000,http://localhost:3001,http://localhost:3005,https://gestao-frontend.onrender.com,https://gestao-frontend-ttgd.onrender.com
     healthCheckPath: /healthz
 
   - type: web
