--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,7 @@ services:
     startCommand: >-
       bash -lc 'export BUILD_TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ");
       export COMMIT_SHA=${RENDER_GIT_COMMIT:-${COMMIT_SHA:-}};
+      python backend/seed_initial_users_and_clients.py || true;
       uvicorn backend.main:app --host 0.0.0.0 --port $PORT'
     autoDeploy: true
     envVars:
