feat(db): suporte a PostgreSQL via DATABASE_URL (psycopg); chore(render): injeta DATABASE_URL do serviço Postgres; docs: guia de dump/restore

--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,10 @@ services:
     envVars:
       - key: DATA_DIR
         value: /var/data
+      - key: DATABASE_URL
+        fromDatabase:
+          name: gestao-postgres
+          property: connectionString
       - key: SECRET_KEY
         value: secret-key-thors-gestor-2025
       - key: ALLOW_ORIGINS
