Frontend: padroniza cards do dashboard (150x150), avatar 75x75 centralizado, remove tarja do Admin; Backend: estabilidade endpoints uploads/auth e healthz; Docs: atualiza README e instruções do projeto

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,11 +1,7 @@
 {
   "root": true,
   "env": { "browser": true, "es2021": true, "node": true },
-  "extends": [
-    "react-app",
-    "react-app/jest",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["react-app", "react-app/jest", "plugin:prettier/recommended"],
   "settings": { "react": { "version": "detect" } },
   "rules": {
     "no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }],
