chore(backend): force redeploy + add monitor script; ensure /api/uploads and /import/contratos go live

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -63,5 +63,13 @@
 			"isBackground": false,
 			"group": "build"
 		}
+		,
+		{
+			"label": "Monitorar deploy e testar upload (prod)",
+			"type": "shell",
+			"command": "pwsh -NoLogo -NoProfile -ExecutionPolicy Bypass -File scripts/monitor_deploy_and_test.ps1",
+			"isBackground": true,
+			"group": "build"
+		}
 	]
 }
