--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,42 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/build",
-  "devCommand": "cd frontend && npm start",
-  "installCommand": "pip install -r requirements.txt && cd frontend && npm install",
-  "framework": null,
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/index.py"
+      "src": "api/index.py",
+      "use": "@vercel/python"
     },
     {
-      "source": "/uploads/:path*",
-      "destination": "/api/index.py"
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
     },
     {
-      "source": "/healthz",
-      "destination": "/api/index.py"
+      "src": "/uploads/(.*)",
+      "dest": "/api/index.py"
     },
     {
-      "source": "/login",
-      "destination": "/api/index.py"
+      "src": "/healthz",
+      "dest": "/api/index.py"
     },
     {
-      "source": "/templates/:path*",
-      "destination": "/api/index.py"
+      "src": "/login",
+      "dest": "/api/index.py"
     },
     {
-      "source": "/(.*)",
-      "destination": "/frontend/build/index.html"
+      "src": "/templates/(.*)",
+      "dest": "/api/index.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/$1"
     }
   ]
 }
