fix(vercel): call react-scripts build.js directly to avoid permission denied on .bin

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "vercel-build": "npx --yes react-scripts build",
+    "vercel-build": "node ./node_modules/react-scripts/scripts/build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx",
