--- a/vercel.json
+++ b/vercel.json
@@ -4,48 +4,13 @@
     {
       "src": "api/index.py",
       "use": "@vercel/python"
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build",
-        "framework": null
-      }
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.py"
-    },
-    {
-      "src": "/uploads/(.*)",
-      "dest": "/api/index.py"
-    },
-    {
-      "src": "/healthz",
-      "dest": "/api/index.py"
-    },
-    {
-      "src": "/login/(.*)",
-      "dest": "/api/index.py"
-    },
-    {
-      "src": "/templates/(.*)",
-      "dest": "/api/index.py"
-    },
-    {
-      "src": "/static/(.*)",
-      "dest": "/frontend/build/static/$1"
-    },
-    {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|json|txt))",
-      "dest": "/frontend/build/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/build/index.html"
-    }
+    { "src": "/api/(.*)", "dest": "/api/index.py" },
+    { "src": "/uploads/(.*)", "dest": "/api/index.py" },
+    { "src": "/healthz", "dest": "/api/index.py" },
+    { "src": "/login(.*)", "dest": "/api/index.py" },
+    { "src": "/templates/(.*)", "dest": "/api/index.py" }
   ]
 }
