--- a/render.yaml
+++ b/render.yaml
@@ -13,21 +13,20 @@ services:
     envVars:
       - key: DATA_DIR
         value: /var/data
-      # Para executar uma migração Postgres -> SQLite, habilite MIGRATE_PG_TO_SQLITE=1 temporariamente
-      # e mantenha o DATABASE_URL neste deploy; após gerar o arquivo SQLite, remova DATABASE_URL
-      # e desative MIGRATE_PG_TO_SQLITE.
-      # - key: MIGRATE_PG_TO_SQLITE
-      #   value: "1"
-      # - key: DATABASE_URL
-      #   fromDatabase:
-      #     name: gestao-postgres
-      #     property: connectionString
+      # Migração Postgres -> SQLite (este commit ativa a migração no startup)
+      - key: MIGRATE_PG_TO_SQLITE
+        value: "1"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: gestao-postgres
+          property: connectionString
       - key: SECRET_KEY
         value: secret-key-thors-gestor-2025
+      # Desativa bootstrap SQLite->Postgres para evitar conflito durante a migração PG->SQLite
       - key: BOOTSTRAP_FROM_SQLITE
-        value: "1"
+        value: "0"
       - key: BOOTSTRAP_FORCE
-        value: "1" # Altere para "0" após confirmar migração em /debug/stats
+        value: "0"
       - key: SEED_ADMIN
         value: "0"
       - key: SEED_WILLIANS
