--- a/render.yaml
+++ b/render.yaml
@@ -8,18 +8,14 @@ services:
     startCommand: >-
       bash -lc 'export BUILD_TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ");
       export COMMIT_SHA=${RENDER_GIT_COMMIT:-${COMMIT_SHA:-}};
-      uvicorn backend.main:app --host 0.0.0.0 --port $PORT'
+  uvicorn backend.main:app --host 0.0.0.0 --port ${PORT:-8000}'
     autoDeploy: true
     envVars:
       - key: DATA_DIR
         value: /var/data
-      # Migração Postgres -> SQLite (este commit ativa a migração no startup)
+      # Migração Postgres -> SQLite (desativada após migração concluída)
       - key: MIGRATE_PG_TO_SQLITE
-        value: "1"
-      - key: DATABASE_URL
-        fromDatabase:
-          name: gestao-postgres
-          property: connectionString
+        value: "0"
       - key: SECRET_KEY
         value: secret-key-thors-gestor-2025
       # Desativa bootstrap SQLite->Postgres para evitar conflito durante a migração PG->SQLite
@@ -28,11 +24,11 @@ services:
       - key: BOOTSTRAP_FORCE
         value: "0"
       - key: SEED_ADMIN
-        value: "0"
+        value: "1"
       - key: SEED_WILLIANS
-        value: "0"
+        value: "1"
       - key: SEED_LOJAS
-        value: "0"
+        value: "1"
       - key: ALLOW_ORIGINS
         value: http://localhost:3000,http://localhost:3001,http://localhost:3005,https://gestao-frontend.onrender.com,https://gestao-frontend-ttgd.onrender.com
       - key: APP_VERSION
@@ -53,8 +49,8 @@ services:
       - key: REACT_APP_API_URL
         value: https://gestao-backend-lbab.onrender.com
 
-databases:
-  - name: gestao-postgres
-    databaseName: gestao
-    plan: free
-    user: gestao
+# databases:
+#   - name: gestao-postgres
+#     databaseName: gestao
+#     plan: free
+#     user: gestao
